<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.imark.nghia.idsdemo.ui.assign.ListAssignActivity">

    <item
        android:id="@+id/action_search"
        android:orderInCategory="1"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/action_search_assign"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_add"
        android:orderInCategory="2"
        android:title="@string/action_add_assign"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_add_white_24dp"/>

    <item
        android:id="@+id/action_download"
        android:orderInCategory="3"
        android:title="@string/action_download_assign"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_cloud_download_white_36dp" />

    <item
        android:id="@+id/action_upload_doing_assign"
        android:orderInCategory="3"
        android:title="@string/action_upload_doing_assign"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_cloud_upload_white_36pt" />

    <item
        android:id="@+id/action_clear_new_assign"
        android:orderInCategory="3"
        android:title="@string/action_clear_new_assign"
        app:showAsAction="ifRoom" />

</menu>
