<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.imark.nghia.idsdemo.ui.assign.ViewAssignActivity">

    <!--Toolbar-->
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar_Main"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/app_spacing_medium">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="0">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_expired_date"
                    style="@style/appTextCaption" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/empty"
                    android:id="@+id/textView_ExpiredDate"
                    style="@style/appTextBody1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_outlet_name"
                    style="@style/appTextCaption" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty"
                    android:id="@+id/textView_OutletName"
                    style="@style/appTextBody1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_address"
                    style="@style/appTextCaption" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty"
                    android:id="@+id/textView_OutletAddress"
                    style="@style/appTextBody1" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    style="@style/appTextBody2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty"
                    android:id="@+id/textView_OutletArea"
                    style="@style/appTextBody1" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/prompt_coordinates"
                    style="@style/appTextCaption" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty"
                    android:id="@+id/textView_Coordinates"
                    style="@style/appTextBody1" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/viewGroup_AssignFunction"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/app_spacing_medium">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/action_capture"
                android:id="@+id/button_StartAssign"
                android:drawableLeft="@drawable/ic_camera_alt_black_36dp"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/action_attendance"
                android:id="@+id/button_StartAttendance"
                android:drawableLeft="@drawable/ic_attendance_32dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout1">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/action_product_shown"
                android:id="@+id/button_StartAddProductShown"
                android:drawableLeft="@drawable/ic_product_shown_32dp"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/action_note"
                android:id="@+id/button_StartAddComment"
                android:drawableLeft="@drawable/ic_comment_32dp"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_upload_finish"
            android:id="@+id/button_Upload_Finish"
            android:layout_gravity="bottom|end"
            android:layout_alignParentBottom="true"
            android:drawableLeft="@drawable/ic_cloud_upload_white_36pt"/>

    </RelativeLayout>

</LinearLayout>
