<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.imark.nghia.idsdemo.ui.assign.AddAssignActivity">

    <!--Toolbar-->
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar_Main"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.AppBarLayout>

    <!--Main Container-->

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_horizontal_margin">

            <LinearLayout
                style="@style/app_input_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    style="@style/app_input_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_expired_date" />

                <Button
                    android:id="@+id/button_ExpiredDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                style="@style/app_input_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/app_input_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputLayout_OutletName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/autoComplete_OutletName"
                        android:layout_gravity="center_horizontal"
                        android:hint="@string/prompt_outlet_name"
                        android:completionThreshold="1"/>
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/viewGroup_NewOutlet"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <LinearLayout
                        style="@style/app_input_group"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            style="@style/app_input_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/prompt_city" />

                        <Spinner
                            android:id="@+id/spinner_City"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:spinnerMode="dialog">

                        </Spinner>

                    </LinearLayout>

                    <LinearLayout
                        style="@style/app_input_group"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            style="@style/app_input_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/prompt_district" />

                        <Spinner
                            android:id="@+id/spinner_District"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:spinnerMode="dialog">

                        </Spinner>

                    </LinearLayout>

                    <LinearLayout
                        style="@style/app_input_group"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/textInputLayout_Username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/editText_OutletAddress"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_address" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        style="@style/app_input_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/app_input_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/prompt_coordinates" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/editText_OutletLatitude"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:hint="@string/prompt_latitude" />

                            <EditText
                                android:id="@+id/editText_OutletLongitude"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:hint="@string/prompt_longitude" />

                            <ImageButton
                                android:id="@+id/button_RefreshOutletCoordinates"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_refresh_black_24dp" />

                            <ImageButton
                                android:id="@+id/button_OpenMap"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_map_16dp" />

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
