<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.imark.nghia.idsdemo.ui.user.ChangePasswordActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar_Main"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/app_form_content">
                <TextView
                    android:id="@+id/textView_DisplayName"
                    style="@style/appTextDisplay1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/empty" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/textInputLayout_OldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/app_form_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/app_form_label"
                    android:text="@string/prompt_old_password"/>

                <EditText
                    android:id="@+id/editText_OldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_old_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/app_form_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/app_form_label"
                    android:text="@string/prompt_new_password"/>

                <EditText
                    android:id="@+id/editText_NewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_new_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/app_form_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/app_form_label"
                    android:text="@string/prompt_confirm_password"/>

                <EditText
                    android:id="@+id/editText_ConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_confirm_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>
